--- a/resume.tex
+++ b/resume.tex
@@ -1,4 +1,4 @@
-% Chris Gibson's Resume
+% Kirill Solokhov Resume
 % URL: 
 %
 % Based on resume tex file by Kamil Wojcicki
@@ -10,13 +10,15 @@
 
 \begin{document}
 
-\name{\huge Christopher Gibson}
+\name{\huge Kirill Solokhov}
 {
 	\sc
-    \hfill (925)330-3571                  \vspace{0mm}\\\vspace{0mm}%
-    \hfill cgibson@mrvoxel.com            \vspace{0mm}\\\vspace{0mm}%
-    \hfill www.mrvoxel.com                \vspace{0mm}\\\vspace{-10mm}%
+    \hfill +7(925)199-3162                  \vspace{0mm}\\\vspace{0mm}%
+    \hfill kiruxan@gmail.com            \vspace{0mm}\\\vspace{-10mm}%
+%    \hfill www.mrvoxel.com                \vspace{0mm}\\\vspace{-10mm}%
+\vspace{1mm}
 }
+
 
 \begin{resume}
 
@@ -26,7 +28,8 @@
     % Interests
     \section{\mysidestyle \textbf{\large{P}\small{ROJECT\\INTERESTS}}}
 
-	Computer graphics, performance, game development, tool development, visualization of data, real-time and pre-rendered graphics
+	Looking for a job as Machine Learning/Data Engineer, also interested in BigData and HighLoad projects. I prefer startups over big companies.
+
 
 \sectionline
 
@@ -34,7 +37,7 @@
     % Computer Skills
     \section{\mysidestyle \textbf{\large{S}\small{KILLS}}}
 
-    Python,\hspace{2mm}C/C++,\hspace{2mm}Java,\hspace{2mm}Rust \textsl{\small(learning)},\hspace{2mm}Lua,\hspace{2mm}Linux shell scripting,\hspace{2mm}\LaTeX.
+    Core Java,\hspace{2mm}Hadoop,\hspace{2mm}Kafka,\hspace{2mm}Spring,\hspace{2mm}SQL,\hspace{2mm}Python,\hspace{2mm}Machine Learning,\hspace{2mm}Bash.
 
 
 \sectionline
@@ -43,38 +46,36 @@
     % Professional Experience
     \section{\mysidestyle \textbf{\large{P}\small{ROFESSIONAL\\EXPERIENCE}}}
 
-    % Start-Up
-    \textbf{\listing Stealth Mode Start-Up}, Menlo Park, CA \vspace{2mm}\\\vspace{1mm}%
-    \textsl{Software Developer} \hfill \textbf{February 2016 -- Present}
+    % Getintent
+    \textbf{\listing Getintent}, Moscow \vspace{2mm}\\\vspace{1mm}%
+    \textsl{Data Team Lead} \hfill \textbf{Nov 2015 – Aug 2018}\\
+    \begin{list2}
+    \item Hired new developers, wrote onboarding plans, was in charge of 3 developers.
+    \item Put in shape company data processing flow, setup Cloudera Hadoop cluster, migrated and wrote new MapReduce jobs. Tuned and optimised Hadoop cluster.
+    \item Migrated from Cloud based Google BigQuery to Yandex ClickHouse which is hosted internally, checked feature requirements and designed migration process.
+    \item Moved from cron based task mangement to Apache Airflow, setup DAGs and developed custom operators.
+    \item Worked closely with Data Scientist to implement and test prediction models for click, fraud, conversions and other events. Used packets: VowpalWabbit and FFM.
+    \item ``Query API'' is an internal service for quering company data from different sources: RDBMS, BigQuery, ClickHouse. The service was moved from PHP to Java with full backward compatibility and transparently for users. 
+    \end{list2}\vspace{1mm}
 
+    \textsl{Senior Solutions Consultant} \vspace{2mm}\hfill \textbf{Jan 2015 – Nov 2015}\\
+    Worked on site (New York, US), developed and deployed custom DSP, consulted client's devops and developers. \vspace{1mm}
 
-    % Amazon Lab 126
-    \textbf{\listing Amazon Lab 126}, Sunnyvale, CA \vspace{2mm}\\\vspace{1mm}%
-    \textsl{Software Development Engineer} \hfill \textbf{September 2014 -- February 2016}\\
-    Worked on the FireOS Frameworks team with a focus on graphics and performance.
+    \textsl{Senior Software Engineer} \vspace{2mm}\hfill \textbf{Dec 2013 – Jan 2015}\\
+   Worked on server bidding logic (5000 QPS per server), implemented campaigns budget pacing algorithm, connect new SSPs and DMPs. Developed business logs ETL process, chose Google BigQuery as primary DB for logs storage.
 
-    % DreamWorks
-    \textbf{\listing DreamWorks Animation}, Redwood City, CA \vspace{2mm}\\\vspace{1mm}%
-    \textsl{Modeling Technical Director} \hfill \textbf{June 2011 -- September 2014}\\
-    Improved and maintained a large code base containing dozens of tools, scripts and applications used by the modeling department.
-    Designed and developed a number of Python-based tools and interfaces for use in Maya.  Addressed issues with the existing asset pipeline. \vspace{1mm}
+    % BPC
+    \textbf{\listing BPC Banking Technologies}, Moscow \vspace{2mm}\\\vspace{1mm}%
+    \textsl{Development Engineer} \hfill \textbf{Mar 2013 – Nov 2013}
 
-    \textsl{Research \& Development, Lighting Team Intern} \vspace{2mm}\hfill \textbf{June 2010 -- August 2010}\\
-    Developed features for production-level tools in C++ and OpenGL.
-    Created unit-tests, ran manual smoke tests and wrote extensive test reports on results and compiler performance.
-    Worked in a large code base and handled multiple development workspaces simultaneously.
+    % Alfa
+    \textbf{\listing AlfaBank}, Moscow \vspace{2mm}\\\vspace{1mm}%
+    \textsl{Senior Development Egineer} \hfill \textbf{Feb 2011 – Mar 2013}\\
+    Was part of the team that developed and succesfully launched new version of Internet Bank, was in charge of several modules and application release scripts.
 
-    % Yahoo Inc.
-    \textbf{\listing Yahoo! Corporation}, Sunnyvale, CA \vspace{2mm}\\\vspace{1mm}%
-    \textsl{Intern \& Contracted Developer} \hfill \textbf{June 2009 -- December 2009}
-
-    % Sun Microsystems
-    \textbf{\listing Sun Microsystems}, Santa Clara, CA \vspace{2mm}\\\vspace{1mm}%
-    \textsl{Intern \& Contracted Developer} \hfill \textbf{June 2008 -- December 2008}
-
-    % CreateSpace
-    \textbf{\listing CreateSpace}, San Luis Obispo, CA \vspace{2mm}\\\vspace{1mm}%
-    \textsl{Software Developer} \hfill \textbf{November 2006 -- January 2008}
+    % OK
+    \textbf{\listing OK Software}, Moscow \vspace{2mm}\\\vspace{1mm}%
+    \textsl{Development Egineer} \hfill \textbf{Aug 2009 -- Feb 2011}
     
 
 \sectionline
@@ -83,58 +84,32 @@
     % Education
     \section{\mysidestyle \textbf{\large{E}\small{DUCATION}}}
 
-    \textbf{\listing California Polytechnic University}, San Luis Obispo, California \vspace{2mm}\\\vspace{1mm}%
-    \textsl{B.S/M.S of Computer Science} \hfill \textbf{ September 2006 -- June 2011}\vspace{-3mm}\\\vspace{-1mm}%
-    \begin{list2}
-        \item Thesis: ``Point Based Color Bleeding With Volumes'' \textsl{(http://github.com/cgibson/Thesis)}
-        \item Advisors:  Dr. Zo\"{e} J. Wood
-    \end{list2}\vspace{-1.5mm}
-
-
-\sectionline
-
-    %__________________________________________________________________________________________________________________
-    % Academia
-    \section{\mysidestyle \textbf{\large{R}\small{ELATED\\ACADEMIA}}} 
-
-	\vspace{1mm} % Used to offset a strange alignment error between title and contents
-	\begin{tabular}{@{}p{5cm}p{5cm}p{5cm}}
-	-Distributed Systems     &  -Graduate Computer Graphics &  -Real-Time Graphics\\
-	-Parallel Computing      &  -Advanced Rendering         &  -Graphics Animation\\
-	\end{tabular}
-	\vspace{2mm} \\
-	\textbf{\listing Cal Poly CUDA Class} - Teaching Assistant \hfill \textbf{ January 2011 -- April 2011}\vspace{-3mm}\\\vspace{-1mm}%
-    \begin{list2}
-    	\item Designed and developed labs and lab resources for students
-        \item Helped combine the ray tracing and CUDA class for three weeks
-    \end{list2}\vspace{-1.5mm}
-
-	\textbf{\listing Cal Poly Game Development Club} - President\hfill \textbf{ November 2009 -- June 2011}\vspace{-3mm}\\\vspace{-1mm}%
-
-	\textbf{\listing Cal Poly ACM} - Corporate Liaison\hfill \textbf{ September 2010 -- June 2011}\vspace{-3mm}\\\vspace{-1mm}%
+    \textbf{\listing Moscow Engineering Physics Institute (MEPhI)}, Moscow \vspace{2mm}\\\vspace{1mm}%
+    \textsl{Cybernetics/Calculating machines, complexes, systems and networks, Engineer} \hfill \textbf{2005 -- 2010}\vspace{-3mm}\\\vspace{-1mm}%
+    \vspace{-1.5mm}
 
 
 \sectionline
 
     %__________________________________________________________________________________________________________________
     % Computer Skills
-    \section{\mysidestyle \textbf{\large{P}\small{ROJECTS}}}
-
-    \vspace{1mm}\hspace{2mm}\includegraphics[width=10mm]{mrvoxel.png}\vspace{-15mm}
-
-	\begin{tabular}{@{}p{1.0cm}p{6cm}p{1.0cm}p{6cm}}
-	\hspace{1mm}&
-    \textbf{\listing Mr. Voxel}\hspace{2mm}\textsl{(Thesis)} &
-    &
-    \textbf{\listing Haste}\\&
-    \textsl{Voxel Rendering/Lighting Library}&
-    &
-    \textsl{Massively Parallel CUDA Ray Tracer}\\&
-    http://github.com/cgibson/Mr-Voxel&
-    \hspace{1mm}&http://github.com/cphaste/haste\\
-	\end{tabular}
-\vspace{-1mm}
-\sectionline
+%    \section{\mysidestyle \textbf{\large{P}\small{ROJECTS}}}
+%
+%    \vspace{1mm}\hspace{2mm}\includegraphics[width=10mm]{mrvoxel.png}\vspace{-15mm}
+%
+%	\begin{tabular}{@{}p{1.0cm}p{6cm}p{1.0cm}p{6cm}}
+%	\hspace{1mm}&
+%    \textbf{\listing Mr. Voxel}\hspace{2mm}\textsl{(Thesis)} &
+%    &
+%    \textbf{\listing Haste}\\&
+%    \textsl{Voxel Rendering/Lighting Library}&
+%    &
+%    \textsl{Massively Parallel CUDA Ray Tracer}\\&
+%    http://github.com/cgibson/Mr-Voxel&
+%    \hspace{1mm}&http://github.com/cphaste/haste\\
+%	\end{tabular}
+%\vspace{-1mm}
+%\sectionline
 
 \end{resume}
 \end{document}
