--- a/resume.tex
+++ b/resume.tex
@@ -1,4 +1,4 @@
-% Kirill Solokhov Resume
+% Maxim Kraynov Resume
 % URL: 
 %
 % Based on resume tex file by Kamil Wojcicki
@@ -10,12 +10,11 @@
 
 \begin{document}
 \vspace{50mm}
-\name{\huge Kirill Solokhov}
+\name{\huge Maxim Kraynov}
 {
 	\sc
-    \hfill +7(925)199-3162                  \vspace{0mm}\\\vspace{0mm}%
-    \hfill kiruxan@gmail.com            \vspace{0mm}\\\vspace{-10mm}%
-%    \hfill www.mrvoxel.com                \vspace{0mm}\\\vspace{-10mm}%
+    \hfill +4915222808576                  \vspace{0mm}\\\vspace{0mm}%
+    \hfill me@maxkraynov.net            \vspace{0mm}\\\vspace{-10mm}%
 \vspace{1mm}
 }
 
@@ -26,9 +25,9 @@
 
     %__________________________________________________________________________________________________________________
     % Interests
-    \section{\mysidestyle \textbf{\large{P}\small{ROJECT\\INTERESTS}}}
+    \section{\mysidestyle \textbf{\large{A}\small{BOUT\\}}}
 
-	Looking for a job as Machine Learning/Data Engineer, also interested in BigData and HighLoad projects. I prefer startups over big companies.
+	I’m Java Software Developer with 7+ years of hands-on experience, specialized in high-load server-side and web-based applications development on Java. DevOps fan. People say I have good communication skills.
 
 
 \sectionline
@@ -37,7 +36,7 @@
     % Computer Skills
     \section{\mysidestyle \textbf{\large{S}\small{KILLS}}}
 
-    Core Java,\hspace{2mm}Hadoop,\hspace{2mm}Kafka,\hspace{2mm}Spring,\hspace{2mm}SQL,\hspace{2mm}Python,\hspace{2mm}Machine Learning,\hspace{2mm}Bash.
+    Java,\hspace{2mm}Spring,\hspace{2mm}SQL,\hspace{2mm}Golang,\hspace{2mm}Ansible,\hspace{2mm}Jenkins,\hspace{2mm}Docker,\hspace{2mm}Bash.
 
 
 \sectionline
@@ -46,36 +45,31 @@
     % Professional Experience
     \section{\mysidestyle \textbf{\large{P}\small{ROFESSIONAL\\EXPERIENCE}}}
 
+    % Zooplus
+    \textbf{\listing Zooplus}, Munich \vspace{2mm}\\\vspace{1mm}%
+    \textsl{Senior Software Engineer} \hfill \textbf{Mar 2018 – July 2019}\\
+    Developed e-commerce payment platform for online shop. \vspace{1mm}
+
     % Getintent
     \textbf{\listing Getintent}, Moscow \vspace{2mm}\\\vspace{1mm}%
-    \textsl{Data Team Lead} \hfill \textbf{Nov 2015 – Aug 2018}\\
-    \begin{list2}
-    \item Hired new developers, wrote onboarding plans, was in charge of 3 developers.
-    \item Put in shape company data processing flow, setup Cloudera Hadoop cluster, migrated and wrote new MapReduce jobs. Tuned and optimised Hadoop cluster.
-    \item Migrated from Cloud based Google BigQuery to Yandex ClickHouse which is hosted internally, checked feature requirements and designed migration process.
-    \item Moved from cron based task mangement to Apache Airflow, setup DAGs and developed custom operators.
-    \item Worked closely with Data Scientist to implement and test prediction models for click, fraud, conversions and other events. Used packets: VowpalWabbit and FFM.
-    \item ``Query API'' is an internal service for quering company data from different sources: RDBMS, BigQuery, ClickHouse. The service was moved from PHP to Java with full backward compatibility and transparently for users. 
-    \end{list2}\vspace{1mm}
+    \textsl{Senior Software Engineer (Data Team)} \hfill \textbf{Feb 2017 – July 2017}\\
+    Wrote MapReduce jobs with the Data Science team to analyze data. \vspace{1mm}
 
-    \textsl{Senior Solutions Consultant} \vspace{2mm}\hfill \textbf{Jan 2015 – Nov 2015}\\
-    Worked on site (New York, US), developed and deployed custom DSP, consulted client's devops and developers. \vspace{1mm}
+    \textsl{Senior Solution Consultant} \vspace{2mm}\hfill \textbf{Oct 2015 – Feb 2017}\\
+    Designed and developed Getintent RTBSuite -- software solution which allows companies to build their own DSPs. Worked on site (Los Angeles, US), developed and deployed custom DSP, consulted client's sysops and developers. \vspace{1mm}
 
-    \textsl{Senior Software Engineer} \vspace{2mm}\hfill \textbf{Dec 2013 – Jan 2015}\\
-   Worked on server bidding logic (5000 QPS per server), implemented campaigns budget pacing algorithm, connect new SSPs and DMPs. Developed business logs ETL process, chose Google BigQuery as primary DB for logs storage.
-
-    % BPC
-    \textbf{\listing BPC Banking Technologies}, Moscow \vspace{2mm}\\\vspace{1mm}%
-    \textsl{Development Engineer} \hfill \textbf{Mar 2013 – Nov 2013}
+    \textsl{Senior Software Engineer} \vspace{2mm}\hfill \textbf{Apr 2014 – Oct 2015}\\
+    Participated in high-load, low-latency DSP solution development (5000 QPS per server).
 
     % Alfa
-    \textbf{\listing AlfaBank}, Moscow \vspace{2mm}\\\vspace{1mm}%
-    \textsl{Senior Development Egineer} \hfill \textbf{Feb 2011 – Mar 2013}\\
-    Was part of the team that developed and succesfully launched new version of Internet Bank, was in charge of several modules and application release scripts.
+    \textbf{\listing Alfa-bank / Alfa-Laboratory}, Moscow \vspace{2mm}\\\vspace{1mm}%
+    \textsl{Software Engineer} \hfill \textbf{Oct 2011 – Mar 2014}\\
+    Participated in development of high-load, low-latency, 24/7 internet-banking system from the beginning to the successful release.
 
-    % OK
-    \textbf{\listing OK Software}, Moscow \vspace{2mm}\\\vspace{1mm}%
-    \textsl{Development Egineer} \hfill \textbf{Aug 2009 -- Feb 2011}
+    % I.T. Co.
+    \textbf{\listing I.T. Co.}, Moscow \vspace{2mm}\\\vspace{1mm}%
+    \textsl{Software Engineer} \hfill \textbf{Oct 2010 – Oct 2011}\\
+    Participated in project ``Development and deployment ECM system for Tele2 Russia''
     
 
 \sectionline
@@ -84,32 +78,30 @@
     % Education
     \section{\mysidestyle \textbf{\large{E}\small{DUCATION}}}
 
-    \textbf{\listing Moscow Engineering Physics Institute (MEPhI)}, Moscow \vspace{2mm}\\\vspace{1mm}%
-    \textsl{Cybernetics/Calculating machines, complexes, systems and networks, Engineer} \hfill \textbf{2005 -- 2010}\vspace{-3mm}\\\vspace{-1mm}%
+    \textbf{\listing National Research University of Electronic Technology}, Moscow \vspace{2mm}\\\vspace{1mm}%
+    \textsl{Computer Science, Master's degree} \hfill \textbf{2010 -- 2012}\vspace{-3mm}\\\vspace{-1mm}%
     \vspace{-1.5mm}
 
+    \textbf{\listing National Research University of Electronic Technology}, Moscow \vspace{2mm}\\\vspace{1mm}%
+    \textsl{Electronics and Microelectronics, Bachelor's degree} \hfill \textbf{2006 -- 2010}\vspace{-3mm}\\\vspace{-1mm}%
+    \vspace{-1.5mm}
 
 \sectionline
 
     %__________________________________________________________________________________________________________________
-    % Computer Skills
-%    \section{\mysidestyle \textbf{\large{P}\small{ROJECTS}}}
-%
-%    \vspace{1mm}\hspace{2mm}\includegraphics[width=10mm]{mrvoxel.png}\vspace{-15mm}
-%
-%	\begin{tabular}{@{}p{1.0cm}p{6cm}p{1.0cm}p{6cm}}
-%	\hspace{1mm}&
-%    \textbf{\listing Mr. Voxel}\hspace{2mm}\textsl{(Thesis)} &
-%    &
-%    \textbf{\listing Haste}\\&
-%    \textsl{Voxel Rendering/Lighting Library}&
-%    &
-%    \textsl{Massively Parallel CUDA Ray Tracer}\\&
-%    http://github.com/cgibson/Mr-Voxel&
-%    \hspace{1mm}&http://github.com/cphaste/haste\\
-%	\end{tabular}
-%\vspace{-1mm}
-%\sectionline
+    % Certificates
+    \section{\mysidestyle \textbf{\large{C}\small{ERTIFICATES}}}
+
+    \textbf{\listing Web services development with Golang} \vspace{2mm}\\\vspace{1mm}%
+    \textsl{Coursera, Moscow Institute of Physics and Technology} \hfill \textbf{Jan 2019}\vspace{-3mm}\\\vspace{-1mm}%
+    \vspace{-1.5mm}
+
+    \textbf{\listing Algorithms} \vspace{2mm}\\\vspace{1mm}%
+    \textsl{Coursera, Stanford University} \hfill \textbf{Jun 2017}\vspace{-3mm}\\\vspace{-1mm}%
+    \vspace{-1.5mm}
+
+\sectionline
+
 
 \end{resume}
 \end{document}
